DPHC-36 - Fix dropdown menu on mobile

--- a/packages/portal-style/src/responsive/modules/_guides.scss
+++ b/packages/portal-style/src/responsive/modules/_guides.scss
@@ -42,6 +42,7 @@
     }
 
     &-dropdown-button {
+      width: auto !important;
       max-width: 80%;
     }
 
